<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    app:cardCornerRadius="15dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/key_word_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:autofillHints="@string/key_word"
            android:ems="10"
            android:fontFamily="sans-serif-condensed-medium"
            android:hint="@string/key_word"
            android:inputType="text"
            android:textColor="@color/brown"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/language_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/en_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/english"
            android:textColor="@color/brown"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/ru_checkbox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/language_title" />

        <CheckBox
            android:id="@+id/ru_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/russian"
            android:textColor="@color/brown"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/en_checkbox" />

        <TextView
            android:id="@+id/language_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/language"
            android:textColor="@color/brown"
            android:textSize="26sp"
            app:layout_constraintBottom_toTopOf="@+id/en_checkbox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/key_word_input" />

        <Button
            android:id="@+id/search_button"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="30dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/search"
            android:textSize="34sp"
            app:cornerRadius="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ru_checkbox" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>